clusters/calops/namespaces/temp-saas/resources/deployments/accounts-manager.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: accounts-manager
  name: accounts-manager
  namespace: temp-saas
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: accounts-manager
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: accounts-manager
    spec:
      containers:
      - env:
        - name: RAILS_LOG_TO_STDOUT
          value: "true"
        - name: ENABLE_BILLING
          value: "true"
        - name: SECRET_KEY_BASE
          value: ag1ooY1keiy8airohquu6oongiekul3l
        - name: JWT_SIGNING_KEY
          value: jlksjdf8923osfdkojsdfa0983hjk143
        - name: DATABASE_URL
          valueFrom: 
            secretKeyRef:
              name: saas-db-credentials
              key: fullurl
        - name: AWS_ACCESS_KEY_ID
          value: AKIAIC6HKDC2IPA6D6NQ
        - name: AWS_SECRET_ACCESS_KEY
          value: 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
        - name: AWS_REGION
          value: us-east-1
        - name: EMAIL_SENDER
          value: Dark Cubed Support <support@darkcubed.com>
        - name: DOMAIN_NAME
          value: soldier.a.darkcubed.net
        - name: STRIPE_PUBLISHABLE_KEY
          value: pk_live_oqFMpuMKqRTjVNKQdxasLDpl
        - name: STRIPE_SECRET_KEY
          value: sk_live_kDS8nN8DoyBWBXFbPa0OrvQZ
        image: 078306444420.dkr.ecr.us-east-2.amazonaws.com/darkcubed/accounts-manager:v25.4.2
        imagePullPolicy: IfNotPresent
        name: accounts-manager
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-manager
  namespace: temp-saas
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: accounts-manager
  sessionAffinity: None
  type: ClusterIP
