clusters/calops/namespaces/temp-saas/resources/deployments/meraki.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: meraki
  name: meraki
  namespace: temp-saas
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: meraki
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: meraki
    spec:
      containers:
      - args:
        - meraki
        - --listen-endpoint=0.0.0.0:8080
        - --postgres-appliance-endpoint=$(DB_URL)
        image: 078306444420.dkr.ecr.us-east-2.amazonaws.com/darkcubed/hyperdark:v25.4.5
        imagePullPolicy: IfNotPresent
        name: meraki
        ports:
        - containerPort: 8080
          name: grpc
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: meraki
  namespace: temp-saas
spec:
  ports:
  - name: grpc
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: meraki
  sessionAffinity: None
  type: ClusterIP
