clusters/calops/namespaces/temp-saas/resources/deployments/queue.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: queue
  name: queue
  namespace: temp-saas
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: queue
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: queue
    spec:
      containers:
      - args:
        - beanstalkd
        - -l
        - 0.0.0.0
        - -p
        - "11300"
        image: activeshadow/beanstalkd:latest
        imagePullPolicy: IfNotPresent
        name: beanstalk
        ports:
        - containerPort: 11300
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 32Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: queue
  namespace: temp-saas
spec:
  ports:
  - name: beanstalk
    port: 11300
    protocol: TCP
    targetPort: 11300
  selector:
    app: queue
  sessionAffinity: None
  type: ClusterIP
